syntax = "proto3";

package pb;
import "common.proto";

service File {
  rpc GetSource(GetSourceRequest) returns (StringResponse) {}
  rpc InsertSource(InsertSourceRequest) returns (StringResponse) {}
}

message GetSourceRequest {
  bytes Key = 1;
}

message InsertSourceRequest {
  bytes Value = 1;
  bytes Desc = 2;
}